# blufio

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  docker-compose.yml
.github/workflows/: audit.yml  bench.yml  ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v1.5-MILESTONE-AUDIT.md  v1.6-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  (+8 more)
contrib/: blufio-instance-setup.sh  blufio-logrotate.conf  blufio.example.toml  blufio.service  blufio@.service
crates/blufio-agent/: Cargo.toml
crates/blufio-agent/src/: channel_mux.rs  context.rs  delegation.rs  heartbeat.rs  lib.rs  sdnotify.rs  session.rs  shutdown.rs
crates/blufio-anthropic/: Cargo.toml
crates/blufio-anthropic/src/: client.rs  lib.rs  sse.rs  types.rs
crates/blufio-audit/: Cargo.toml
crates/blufio-audit/migrations/: V1__create_audit_entries.sql
crates/blufio-audit/src/: chain.rs  filter.rs  lib.rs  migrations.rs  models.rs  subscriber.rs  writer.rs
crates/blufio-audit/tests/: proptest_chain.rs
crates/blufio-auth-keypair/: Cargo.toml
crates/blufio-auth-keypair/src/: keypair.rs  lib.rs  message.rs
crates/blufio-bridge/: Cargo.toml
crates/blufio-bridge/src/: formatter.rs  lib.rs  router.rs
crates/blufio-bus/: Cargo.toml
crates/blufio-bus/src/: events.rs  lib.rs
crates/blufio-config/: Cargo.toml
crates/blufio-config/src/: diagnostic.rs  lib.rs  loader.rs  model.rs  validation.rs
crates/blufio-config/tests/: config_tests.rs
crates/blufio-context/: Cargo.toml
crates/blufio-context/src/: budget.rs  compaction.rs  conditional.rs  dynamic.rs  lib.rs  static_zone.rs
crates/blufio-context/src/compaction/: archive.rs  extract.rs  levels.rs  mod.rs  quality.rs
crates/blufio-context/tests/: proptest_quality.rs
crates/blufio-core/: Cargo.toml
crates/blufio-core/src/: classification.rs  error.rs  format.rs  lib.rs  streaming.rs  token_counter.rs  types.rs
crates/blufio-core/src/traits/: adapter.rs  auth.rs  channel.rs  embedding.rs  image.rs  mod.rs  observability.rs  provider.rs  provider_registry.rs  skill.rs  storage.rs  transcription.rs  tts.rs
crates/blufio-cost/: Cargo.toml
crates/blufio-cost/src/: budget.rs  ledger.rs  lib.rs  pricing.rs
crates/blufio-cron/: Cargo.toml
crates/blufio-cron/src/: history.rs  lib.rs  scheduler.rs  systemd.rs
crates/blufio-cron/src/retention/: mod.rs  permanent.rs  soft_delete.rs
crates/blufio-cron/src/tasks/: backup.rs  cost_report.rs  health_check.rs  memory_cleanup.rs  mod.rs  retention.rs
crates/blufio-discord/: Cargo.toml
crates/blufio-discord/src/: commands.rs  handler.rs  lib.rs  markdown.rs  streaming.rs
crates/blufio-email/: Cargo.toml
crates/blufio-email/src/: imap.rs  lib.rs  parsing.rs  smtp.rs
crates/blufio-email/tests/: integration.rs
crates/blufio-gateway/: Cargo.toml
crates/blufio-gateway/src/: audit.rs  auth.rs  classify.rs  handlers.rs  lib.rs  openapi.rs  rate_limit.rs  server.rs  sse.rs  ws.rs
crates/blufio-gateway/src/api_keys/: handlers.rs  mod.rs  store.rs
crates/blufio-gateway/src/batch/: handlers.rs  mod.rs  processor.rs  store.rs
crates/blufio-gateway/src/openai_compat/: handlers.rs  mod.rs  responses.rs  responses_types.rs  stream.rs  tools.rs  tools_types.rs  types.rs
crates/blufio-gateway/src/snapshots/: blufio_gateway__openapi__tests__openapi_spec.snap
crates/blufio-gateway/src/webhooks/: delivery.rs  handlers.rs  mod.rs  store.rs
crates/blufio-gdpr/: Cargo.toml
crates/blufio-gdpr/src/: config.rs  erasure.rs  events.rs  export.rs  lib.rs  manifest.rs  models.rs  report.rs
crates/blufio-hooks/: Cargo.toml
crates/blufio-hooks/src/: executor.rs  lib.rs  manager.rs  recursion.rs
crates/blufio-imessage/: Cargo.toml
crates/blufio-imessage/src/: api.rs  lib.rs  types.rs  webhook.rs
crates/blufio-imessage/tests/: integration.rs
crates/blufio-injection/: Cargo.toml
crates/blufio-injection/src/: boundary.rs  canary.rs  classifier.rs  config.rs  events.rs  hitl.rs  lib.rs  metrics.rs  normalize.rs  output_screen.rs  patterns.rs  pipeline.rs
crates/blufio-injection/tests/: corpus_validation.rs
crates/blufio-injection/tests/fixtures/: attack_corpus.json  benign_corpus.json
crates/blufio-irc/: Cargo.toml
crates/blufio-irc/src/: flood.rs  lib.rs  sasl.rs  splitter.rs
crates/blufio-matrix/: Cargo.toml
crates/blufio-matrix/src/: handler.rs  lib.rs
crates/blufio-mcp-client/: Cargo.toml
crates/blufio-mcp-client/src/: external_tool.rs  health.rs  lib.rs  manager.rs  pin.rs  pin_store.rs  sanitize.rs  trust_zone.rs
crates/blufio-mcp-server/: Cargo.toml
crates/blufio-mcp-server/src/: auth.rs  bridge.rs  handler.rs  lib.rs  notifications.rs  prompts.rs  resources.rs  transport.rs  types.rs
crates/blufio-memory/: Cargo.toml
crates/blufio-memory/src/: background.rs  embedder.rs  eviction.rs  extractor.rs  lib.rs  model_manager.rs  provider.rs  retriever.rs  store.rs  types.rs  validation.rs  vec0.rs  watcher.rs
crates/blufio-node/: Cargo.toml
crates/blufio-node/src/: approval.rs  config.rs  connection.rs  fleet.rs  heartbeat.rs  lib.rs  pairing.rs  store.rs  types.rs
crates/blufio-ollama/: Cargo.toml
crates/blufio-ollama/src/: client.rs  lib.rs  stream.rs  types.rs
crates/blufio-plugin/: Cargo.toml
crates/blufio-plugin/src/: catalog.rs  lib.rs  manifest.rs  registry.rs
crates/blufio-prometheus/: Cargo.toml
crates/blufio-prometheus/src/: lib.rs  recording.rs
crates/blufio-resilience/: Cargo.toml
crates/blufio-resilience/src/: circuit_breaker.rs  clock.rs  degradation.rs  lib.rs  registry.rs  snapshot.rs
crates/blufio-security/: Cargo.toml
crates/blufio-security/src/: classification_guard.rs  lib.rs  pii.rs  redact.rs  ssrf.rs  tls.rs
crates/blufio-security/tests/: proptest_pii.rs
deploy/: .env.example  blufio.service
docs/: benchmarks.md
(+801 files in other folders)
