[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blufio/blufio"
authors = ["Blufio Contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
figment = { version = "0.10", features = ["toml", "env"] }
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"
strum = { version = "0.26", features = ["derive"] }
dirs = "6"
strsim = "0.11"
semver = "1"
tracing = "0.1"
tokio = { version = "1" }
tikv-jemallocator = "0.6"
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] }
rusqlite = { version = "0.37", features = ["bundled"] }
tokio-rusqlite = "0.7"
refinery = { version = "0.9", features = ["rusqlite"] }
ring = "0.17"
argon2 = "0.5"
secrecy = { version = "0.10", features = ["serde"] }
rpassword = "7"
zeroize = { version = "1.8", features = ["derive"] }
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
tokio-util = { version = "0.7", features = ["rt"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustyline = "14"
colored = "2"
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "download-binaries", "copy-dylibs", "tls-native"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
ndarray = "0.17"
wasmtime = "40"
wasmtime-wasi = "40"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[profile.release-musl]
inherits = "release"
lto = true
opt-level = "s"
panic = "abort"
strip = "symbols"
