[package]
name = "blufio-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Agent loop and session management for Blufio"

[dependencies]
blufio-bus = { path = "../blufio-bus" }
blufio-core = { path = "../blufio-core" }
blufio-auth-keypair = { path = "../blufio-auth-keypair" }
blufio-config = { path = "../blufio-config" }
blufio-security = { path = "../blufio-security" }
blufio-context = { path = "../blufio-context" }
blufio-cost = { path = "../blufio-cost" }
blufio-memory = { path = "../blufio-memory" }
blufio-router = { path = "../blufio-router" }
blufio-resilience = { path = "../blufio-resilience" }
blufio-injection = { path = "../blufio-injection" }
blufio-skill = { path = "../blufio-skill" }
async-trait.workspace = true
semver.workspace = true
tokio = { workspace = true, features = ["sync", "time", "signal", "macros", "fs"] }
tokio-util.workspace = true
tracing.workspace = true
futures.workspace = true
uuid.workspace = true
chrono.workspace = true
serde_json = "1"
base64 = "0.22"
blufio-prometheus = { path = "../blufio-prometheus", optional = true }

[target.'cfg(unix)'.dependencies]
sd-notify = "0.4"

[features]
default = []
prometheus = ["dep:blufio-prometheus"]

[dev-dependencies]
blufio-test-utils = { path = "../blufio-test-utils" }
blufio-storage = { path = "../blufio-storage" }
tokio = { workspace = true, features = ["full"] }
tempfile = "3"
futures-core = "0.3"
