[package]
name = "blufio-anthropic"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Anthropic Claude provider adapter for Blufio"

[dependencies]
blufio-core = { path = "../blufio-core" }
blufio-config = { path = "../blufio-config" }
reqwest.workspace = true
serde.workspace = true
serde_json = "1"
async-trait.workspace = true
semver.workspace = true
tokio = { workspace = true, features = ["time", "fs"] }
tracing.workspace = true
futures = "0.3"
eventsource-stream = "0.2"
pin-project-lite = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
wiremock = "0.6"
