[package]
name = "blufio-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Tamper-evident hash-chain audit trail for the Blufio agent framework"

[dependencies]
blufio-bus = { path = "../blufio-bus" }
blufio-core = { path = "../blufio-core" }
blufio-storage = { path = "../blufio-storage" }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
tokio-rusqlite = { workspace = true }
rusqlite = { workspace = true }
refinery = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tracing = { workspace = true }
metrics = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
