[package]
name = "blufio-auth-keypair"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Ed25519 device keypair authentication adapter for the Blufio framework"

[dependencies]
blufio-core = { path = "../blufio-core" }
async-trait.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
semver.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json = "1"
hex.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
