[package]
name = "blufio-bus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Internal typed event bus for the Blufio agent framework"

[dependencies]
serde.workspace = true
serde_json = "1"
chrono.workspace = true
uuid.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
tokio-test = "0.4"
