[package]
name = "blufio-email"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Email channel adapter (IMAP/SMTP) for the Blufio agent framework"

[dependencies]
blufio-core = { path = "../blufio-core" }
blufio-config = { path = "../blufio-config" }
async-trait.workspace = true
tokio = { workspace = true, features = ["sync", "time", "net", "io-util"] }
tracing.workspace = true
async-imap.workspace = true
lettre.workspace = true
mail-parser.workspace = true
html2text.workspace = true
comrak.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json = "1"
uuid.workspace = true
chrono.workspace = true
futures.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
webpki-roots.workspace = true
semver.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
