[package]
name = "blufio-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "HTTP/WebSocket gateway implementing ChannelAdapter for the Blufio framework"

[dependencies]
blufio-core = { path = "../blufio-core" }
blufio-bus = { path = "../blufio-bus" }
blufio-skill = { path = "../blufio-skill" }
async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio = { workspace = true, features = ["sync", "net", "macros", "rt"] }
serde.workspace = true
serde_json = "1"
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
semver.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
dashmap.workspace = true
futures.workspace = true
sha2.workspace = true
hmac.workspace = true
rand.workspace = true
reqwest.workspace = true
tokio-rusqlite.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
