[package]
name = "blufio-gdpr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "GDPR data subject rights tooling for the Blufio agent framework"

[dependencies]
blufio-bus = { path = "../blufio-bus" }
blufio-config = { path = "../blufio-config" }
blufio-core = { path = "../blufio-core" }
serde.workspace = true
serde_json = "1"
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
uuid.workspace = true
csv.workspace = true
tokio-rusqlite.workspace = true
rusqlite.workspace = true
metrics.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
