[package]
name = "blufio-hooks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Shell-based lifecycle hook system for the Blufio agent framework"

[dependencies]
blufio-bus = { path = "../blufio-bus" }
blufio-config = { path = "../blufio-config" }
serde.workspace = true
serde_json = "1"
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time", "rt", "macros", "process", "io-util"] }
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
