[package]
name = "blufio-imessage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "iMessage channel adapter (BlueBubbles) for the Blufio agent framework"

[dependencies]
blufio-core = { path = "../blufio-core" }
blufio-config = { path = "../blufio-config" }
async-trait.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json = "1"
axum.workspace = true
uuid.workspace = true
chrono.workspace = true
semver.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
