[package]
name = "blufio-irc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "IRC channel adapter for the Blufio agent framework"

[dependencies]
blufio-core = { path = "../blufio-core" }
blufio-config = { path = "../blufio-config" }
async-trait.workspace = true
tokio = { workspace = true, features = ["net", "sync", "time", "macros", "rt"] }
serde.workspace = true
serde_json = "1"
tracing.workspace = true
semver.workspace = true
uuid.workspace = true
irc = { version = "1", default-features = false, features = ["tls-rust"] }
base64 = "0.22"
futures.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
