[package]
name = "blufio-mcp-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "MCP client implementation for the Blufio agent framework"

[dependencies]
blufio-core = { path = "../blufio-core" }
blufio-config = { path = "../blufio-config" }
blufio-context = { path = "../blufio-context" }
blufio-storage = { path = "../blufio-storage" }
blufio-prometheus = { path = "../blufio-prometheus" }
blufio-skill = { path = "../blufio-skill" }
rmcp = { workspace = true, features = ["client", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }
serde.workspace = true
serde_json = "1"
tokio = { workspace = true, features = ["sync", "rt", "time"] }
tracing.workspace = true
async-trait.workspace = true
ring = { workspace = true }
regex = { workspace = true }
hex = "0.4"
tokio-rusqlite = { workspace = true }
rusqlite = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
