[package]
name = "blufio-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "MCP server implementation for the Blufio agent framework"

[dependencies]
blufio-core = { path = "../blufio-core" }
blufio-config = { path = "../blufio-config" }
blufio-skill = { path = "../blufio-skill" }
rmcp = { workspace = true, features = ["server", "macros", "transport-io"] }
schemars.workspace = true
serde.workspace = true
jsonschema = { workspace = true }
serde_json = "1"
tokio = { workspace = true, features = ["sync", "rt", "time", "io-std"] }
tokio-util.workspace = true
tracing.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
