[package]
name = "blufio-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Paired device mesh with Ed25519 mutual authentication for Blufio"

[dependencies]
blufio-auth-keypair = { path = "../blufio-auth-keypair" }
blufio-bus = { path = "../blufio-bus" }
blufio-config = { path = "../blufio-config" }
blufio-core = { path = "../blufio-core" }

axum = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
ed25519-dalek = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
qrcode = { workspace = true }
rand = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = "1"
sha2 = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-rusqlite = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
