[package]
name = "blufio-ollama"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Ollama native provider adapter for Blufio"

[dependencies]
blufio-core = { path = "../blufio-core" }
blufio-config = { path = "../blufio-config" }
reqwest.workspace = true
serde.workspace = true
serde_json = "1"
async-trait.workspace = true
semver.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true
futures = "0.3"
bytes = "1"
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
wiremock = "0.6"
