[package]
name = "blufio-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Plugin registry, manifest parser, and built-in adapter catalog for the Blufio framework"

[dependencies]
blufio-core = { path = "../blufio-core" }
async-trait.workspace = true
serde.workspace = true
serde_json = "1"
toml.workspace = true
semver.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
