[package]
name = "blufio-prometheus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Prometheus metrics adapter for the Blufio framework"

[dependencies]
blufio-core = { path = "../blufio-core" }
async-trait.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
semver.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
