[package]
name = "blufio-security"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Network security enforcement (TLS, SSRF prevention, secret redaction) for the Blufio agent framework"

[dependencies]
blufio-core = { path = "../blufio-core" }
blufio-config = { path = "../blufio-config" }
reqwest.workspace = true
regex.workspace = true
tracing.workspace = true
thiserror.workspace = true
url = "2"
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
